Created page with "The best media player ever. For a GUI-based player, try SMPlayer (<code>emerge smplayer</code>).  == Disable Screensaver while playing a video == Should work for any freedesktop-..."

--- a/MPlayer.mw
+++ b/MPlayer.mw
@@ -1,67 +1,8 @@
-<languages />
-<translate>
-{{InfoBox stack
-|{{InfoBox homepage|http://www.mplayerhq.hu|header=true}}
-|{{InfoBox wikipedia}}
-}}
-'''MPlayer''' is [[Article description::a powerful command-line media player]].
+The best media player ever. For a GUI-based player, try SMPlayer (<code>emerge smplayer</code>).
 
-{{Note|MPlayer is not very actively maintained anymore, but still alive. However, its fork [[mpv|MPV]] is active and it comes with some extra features too.}}
-== Installation ==
+== Disable Screensaver while playing a video ==
+Should work for any freedesktop-compliant environment (like KDE).
 
-=== USE flags ===
-
-{{USEflag|package=media-video/mplayer}}
-
-=== Emerge ===
-
-Install {{Package|media-video/mplayer}}:
-
-{{Emerge|media-video/mplayer}}
-
-== Configuration ==
-
-=== GUI tools ===
-
-There are a number of different GUI's for MPlayer with different levels of functionality. Some notable ones include:
-
-* {{Package|media-video/gnome-mplayer}}
-* {{Package|media-video/kmplayer}}
-* {{Package|media-video/smplayer}}
-
-== Usage ==
-
-=== Streaming videos from websites ===
-
-MPlayer has the ability to stream videos from websites. As a prerequisite, {{Package|media-video/ffmpeg}} must have the <code>openssl</code> and <code>gnutls</code> USE flags enabled. To do this, simply enter the command:
-
-{{Cmd|mplayer ''url''}}
-
-Where ''url'' is the URL of the video.
-
-== Tips ==
-
-=== Disable screensaver while playing a video ===
-
-Using qdbus (Qt/KDE):
-
-{{FileBox|filename=~/.mplayer/config|
-heartbeat-cmd{{=}}"qdbus org.freedesktop.ScreenSaver /ScreenSaver SimulateUserActivity"
-}}
-
-For systems using xscreensaver alone:
-
-{{FileBox|filename=~/.mplayer/config|
-heartbeat-cmd{{=}}"xscreensaver-command -deactivate >&- 2>&- &" 
-}}
-
-See [http://www.jwz.org/xscreensaver/faq.html#dvd this FAQ entry] for more informations.
-
-== Troubleshooting ==
-
-=== My video won't play! ===
-
-MPlayer uses USE flags to enable and disable support for various codecs. If a particular type of file will not play in MPlayer, first check which USE flags MPlayer was emerged with. Update the USE flags to support for the format you are trying to play and recompile.
-</translate>
-
-[[Category:Multimedia]]
+{{File|~/.mplayer/config||<pre>
+heartbeat-cmd="qdbus org.freedesktop.ScreenSaver /ScreenSaver SimulateUserActivity"
+</pre>}}
