--- a/Skype.mw
+++ b/Skype.mw
@@ -1,73 +1,12 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://www.skype.com/|header=true}}
-|{{InfoBox wikipedia}}
-}}
-
-'''Skype''' is [[Article description::a proprietary application owned by Microsoft for instant messaging, VoIP calls, and video conversations.]]
+Skype is a proprietary application for making VoIP calls and instant messaging.
 
 == Installation ==
+{{RootCmd|emerge --ask net-im/skype}}
 
-=== USE flags ===
+== Auto-launching at KDE login ==
+For some reason, KDE cannot remember Skype in the session it saves upon log out. This is my current workaround. What does not yet work is to have Skype go to a desktop (even with Window-specific settings for Skype). Because of this, you will have to drag Skype to the desired desktop each time you log in.
 
-{{USEflag|package=net-im/skypeforlinux}}
-
-=== Emerge ===
-
-Install {{Package|net-im/skypeforlinux}}:
-
-{{Emerge|net-im/skypeforlinux}}
-
-=== Additional USE flags ===
-
-The following settings will need to be in {{Path|/etc/portage/package.accept_keywords/skypeforlinux}} or some equivalent.
-
-{{RootCmd|echo "{{=}}net-im/skypeforlinux-8.45.0.41 ~amd64" >> /etc/portage/package.accept_keywords/skypeforlinux}}
-
-Edit your pinentry usage in this way.
-
-{{RootCmd|echo ">{{=}}app-crypt/pinentry-1.0.0-r2 gnome-keyring" >> /etc/portage/package.use/pinentry}}
-
-and then just install the package.
-
-{{RootCmd|emerge skypeforlinux}}
-
-== Troubleshooting ==
-
-=== Auto-launching at KDE login ===
-
-For some reason, [[KDE]] cannot remember Skype in the session it saves upon log out. This workaround will fool it into saving Skype in the session.
-
-{{FileBox|filename=~/.kde4/Autostart/skype.sh|lang=bash|1=
+{{File|~/.kde4/Autostart/skype.sh||<pre>
 #!/bin/sh
-skypeforlinux
-}}
-
-To make the Skype main window (but not chat windows) go to a desktop or any other features of Window Rules with KDE, use this regular expression under Window Title in the settings window:
-
-{{CodeBox|1=
-(^[A-Za-z0-9]+\s\-\s)?Skype™(\s\d+\.\d+)?\s\(Beta\)(\sfor\sLinux)?$
-}}
-
-=== No video (despite video drivers being installed/loaded) ===
-
-==== Permissions ====
-
-It is possible, that your user does not have privileges to access video device. Example privileges:
-
-{{Cmd|ls -al /dev/video0|output=<pre>
-crw-rw----+ 1 root video 81, 0 Nov 25 22:03 /dev/video0
+skype
 </pre>}}
-
-Add each Skype user to the video group:
-
-{{RootCmd|gpasswd -a larry video}}
-
-Where {{c|larry}} is substituted for the appropriate username.
-
-== See also ==
-
-* {{See also|Linphone}} 
-* {{See also|Mumble}}
-
-[[Category:Telephony software]]
-[[Category:Closed source software]]
