create preliminary wicd page

--- a/Wicd.mw
+++ b/Wicd.mw
@@ -1,62 +1,29 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://launchpad.net/wicd|header=true}}
-|{{InfoBox wikipedia}}
-}}
-
-{{Important|Wicd is not being maintained by its authors.  It may become inoperable at any time due to bugs or obsolete tools.}}
-
-'''Wicd''' ('''W'''ireless '''i'''nterface '''c'''onnection '''d'''aemon) is [[Article description::a [[network management|network management software]] for managing Wifi and Ethernet network connections.]]
+Wicd is a utility for managing network connections, both wired and wireless.
 
 == Installation ==
-
-=== USE flags ===
-
-{{USEflag|package=net-misc/wicd}}
-
-=== Emerge ===
-
-Install {{Package|net-misc/wicd}}:
-
 {{Emerge|net-misc/wicd}}
 
-=== Kernel ===
-
-In the kernel, be sure to enable both cfg80211 wireless configuration API support and the associated extensions cfg80211_wext:
-
-{{KernelBox|1=
-[*] Networking support  --->
-    -*-   Wireless  ---> 
-        <*>   cfg80211 - wireless configuration API
-        [*]   cfg80211 wireless extensions compatibility
+== USE Flags ==
+{{USEflag
+|X
+|gtk+yes
+|libnotify
+|ncurses
+|nls
+|pm-utils+yes++Install pm-utils hooks for suspend/resume, require {{Package|sys-power/pm-utils}}
 }}
 
-== Configuration ==
-
-=== OpenRC ===
-
-After installing add wicd to the default runlevel:
-
+== Runlevels ==
+After installing add wicd to the default runlevel.
 {{RootCmd|rc-update add wicd default}}
-
 Be sure to remove any references to net.eth*. For net.eth0:
-
 {{RootCmd|rc-update del net.eth0}}
-
-It is possible to start the service right now by issuing:
-
-{{RootCmd|rc-service wicd start}}
-
-Add the initscripts which were removed to the {{Path|/etc/rc.conf}} file, on the <var>RC_PLUG_SERVICES</var> line, by prepending exclamation points to them. For net.eth0:
-
-{{FileBox|filename=/etc/rc.conf|lang=bash|1=
-rc_hotplug="!net.eth0"
+Add the initscripts which were removed to the /etc/rc.conf file, on the RC_PLUG_SERVICES line, by prepending exclamation points to them. For net.eth0:
+{{GenericCmd|
+rc_hotplug<nowiki>=</nowiki>"!net.eth0"
 }}
 
-== Troubleshooting ==
+== Links ==
+* [http://wicd.sourceforge.net/ Wicd Homepage]
 
-=== Wicd service/client does not start with "Could not connect to wicd's D-Bus interface" on Xfce ===
-After upgrading wicd, using Xfce and ConsoleKit, you may see this error persist even after restarting the ''dbus'' service.  Try clearing your Xfce session by unchecking "Save session for future logins" and re-login.  There may be a simpler workaround than this.
-=== Wicd is not able to scan for Wireless Networks while using the new nl80211 Interface ===
-As stated [https://bugs.launchpad.net/wicd/+bug/1290024 here] there is a known bug in Wicd that prevents Wicd using the new nl80211 kernel interface Scanning for Wireless Networks, even if you change the Wicd config to use the new interface. There is currently no working workaround for this. Be sure to enable the cfg80211 - wireless configuration API in your kernel using the kernel option suggested above and select wext as the driver.
-
-[[Category:Network management]] [[Category:Wireless]]
+[[Category:Desktop]]
