--- a/Acer_Travelmate_8172.mw
+++ b/Acer_Travelmate_8172.mw
@@ -1,10 +1,9 @@
-{{Stub}}
-{{InfoBox stack
-|{{InfoBox todo|[[#Graphics Chip|Graphics Chip]]|header=true}}
-}}
+==Overview==
+
 This is an article about running Gentoo on an Acer TravelMate 8172 series laptop.
 
-== Laptop Specifications ==
+==Laptop Specifications==
+
 Hardware specs may vary. These are the specs for the model Acer TravelMate 8172-33U3G32nkk:
 
 * Intel Core i3-330UM 1.2GHz 3MB cache
@@ -21,7 +20,8 @@ Hardware specs may vary. These are the specs for the model Acer TravelMate 8172-
 * Dock connector
 
 Printout of lspci:
-{{RootCmd|lspci|output=<pre>
+{{Command|lspci}}
+<pre>
 00:00.0 Host bridge: Intel Corporation Arrandale DRAM Controller (rev 02)
 00:02.0 VGA compatible controller: Intel Corporation Arrandale Integrated Graphics Controller (rev 02)
 00:16.0 Communication controller: Intel Corporation Ibex Peak HECI Controller (rev 06)
@@ -45,10 +45,10 @@ ff:02.1 Host bridge: Intel Corporation QPI Physical 0 (rev 05)
 ff:02.2 Host bridge: Intel Corporation Device 2d12 (rev 05)
 ff:02.3 Host bridge: Intel Corporation Device 2d13 (rev 05)
 </pre>
-}}
 
 Printout of lsusb (builtin devices, no external devices connected):
-{{RootCmd|lsusb|output=<pre>
+{{Command|lsusb}}
+<pre>
 Bus 002 Device 005: ID 0bda:0138 Realtek Semiconductor Corp. 
 Bus 002 Device 002: ID 8087:0020  
 Bus 002 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
@@ -58,10 +58,10 @@ Bus 001 Device 003: ID 0402:9665 ALi Corp.
 Bus 001 Device 002: ID 8087:0020  
 Bus 001 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
 </pre>
-}}
 
 Printout of lsmod (builtin devices, no external devices connected):
-{{RootCmd|lsmod|output=<pre>
+{{Command|lsmod}}
+<pre>
 leho@travelmate ~ $ lsmod | sort
 ac                      1632  0 
 acer_wmi               13531  0 
@@ -109,10 +109,9 @@ uvcvideo               45608  0
 videodev               45609  1 uvcvideo
 wmi                     5926  1 acer_wmi
 </pre>
-}}
 
 Information from {{Path|/proc/cpuinfo}} :
-{{RootCmd|cat /proc/cpuinfo|output=<pre>
+{{File|/proc/cpuinfo|<pre>
 processor	: 0
 vendor_id	: GenuineIntel
 cpu family	: 6
@@ -231,6 +230,7 @@ power management:
 </pre>}}
 
 == Hardware Support ==
+{{FixMe|provide kernel configuration examples for each of these}}
 
 === Input Devices ===
 
@@ -238,18 +238,18 @@ power management:
 * Hard Drive controller works using ahci driver in the kernel.
 
 === Graphics Chip ===
-TODO
+{{FixMe|to be seen}}
 
 === Ethernet Card ===
-{{KernelBox|title=Broadcom Tigon3|
+{{Kernel|Broadcom Tigon3|<pre>
 Device Drivers  --->
     [*] Network device support  --->
         [*]   Ethernet (1000 Mbit)  --->
             <*>   Broadcom Tigon3 support
-}}
+</pre>}}
 
 === WLAN Card ===
-{{KernelBox|title=Broadcom 4357, 2.6.38|
+{{Kernel|Broadcom 4357, 2.6.38|<pre>
 [*] Networking support  --->
     [*]   Wireless  --->
         <*>   Generic IEEE 802.11 Networking Stack (mac80211)
@@ -260,22 +260,25 @@ Device Drivers  --->
             Broadcom IEEE802.11n driver style (Broadcom IEEE802.11n PCIe SoftMAC WLAN driver)  --->
                 (X) Broadcom IEEE802.11n PCIe SoftMAC WLAN driver
                 ( ) Broadcom IEEE802.11n embedded FullMAC WLAN driver
-}}
+</pre>}}
 
 You'll also need the firmware:
-{{Emerge|linux-firmware}}
+{{Root|# emerge sys-kernel/linux-firmware
 
-You will also need to rename firmware files, see {{Bug|351295}}.
+You will also need to rename firmware files: 
+https://bugs.gentoo.org/351295
+}}
 
 2.6.38 kernel driver is capable of seriously spamming syslog with "Short CCK" messages. This was patched for 2.6.39, but hasn't been backported as of 2.6.38.7.
 
 === CPU Frequency Scaling ===
-{{KernelBox|title=CPU Frequency Scaling|
+
+{{Kernel|CPU Frequency Scaling|<pre>
 Power management and ACPI options  --->
     CPU Frequency scaling  ---> 
     [*] CPU Frequency scaling
     <*>   ACPI Processor P-States driver
-}}
+</pre>}}
 
 === Sound Chip ===
 * Works under alsa using the HDA driver. Codec is Conexant.
@@ -285,40 +288,33 @@ Power management and ACPI options  --->
 
 === Card Reader ===
 * Is a PCI device. SD Card portion works using SDHCI driver.
-
 === Fingerprint reader ===
 * Untested
-
 === WiFi, HDD LEDs ===
 * HDD LED works
 * WIFI LED blinks very rarely, not sure whats going on
 
 === Problems ===
 * thermal zone driver seems to be confused and fan seems to turn on way too often and too early
-{{Cmd|cat /sys/class/thermal/thermal_zone0/temp|output=<pre>
+<pre>
+leho@travelmate ~ $ cat /sys/class/thermal/thermal_zone0/temp 
 6800
-</pre>}}
-
-{{Cmd|cat /sys/devices/platform/coretemp.0/temp1_input|output=<pre>
+leho@travelmate ~ $ cat /sys/devices/platform/coretemp.0/temp1_input 
 39000
-</pre>}}
 
-{{Cmd|ls /sys/class/thermal/thermal_zone0/trip_point_*|output=<pre>
+leho@travelmate ~ $ ls /sys/class/thermal/thermal_zone0/trip_point_*
 /sys/class/thermal/thermal_zone0/trip_point_0_temp
 /sys/class/thermal/thermal_zone0/trip_point_0_type
 /sys/class/thermal/thermal_zone0/trip_point_1_temp
 /sys/class/thermal/thermal_zone0/trip_point_1_type
 /sys/class/thermal/thermal_zone0/trip_point_2_temp
 /sys/class/thermal/thermal_zone0/trip_point_2_type
-</pre>}}
 
-{{Cmd|cat /sys/class/thermal/thermal_zone0/trip_point_*|output=<pre>
+leho@travelmate ~ $ cat /sys/class/thermal/thermal_zone0/trip_point_*
 100000
 critical
 70000
 active
 55000
 active
-</pre>}}
-
-[[Category:Laptops]]
+</pre>
