Initial entry, includes how to fake an RPM installation

--- a/RPM.mw
+++ b/RPM.mw
@@ -1,40 +1,40 @@
 == RPMs - faking them ==
 Handy for persuading an installer that something is actually installed.  The following recipe creates an RPM that does nothing but fake an RPM installation.  Usually you can get away with something like this to install an RPM:
 
-{{RootCmd|rpm -Uvh --nodeps <example.rpm>}}
+ rpm -Uvh --nodeps <rpm.rpm> 
 
 but if an application has an installer that calls RPM directly to see whether something is installed, this might get you over that hurdle.  Make sure the corresponding ebuild is installed from Portage!
 
 * Create a .spec file in /usr/src/rpm/SPECS/. Then "build" the rpm
-{{RootCmd|rpmbuild -ba <specfile>}}
+  rpmbuild -ba <specfile>
 
 * Watch the output from the above to see where the .rpm is created and then install it
-{{RootCmd|rpm -Uvh <rpm>}}
+  rpm -Uvh <rpm>
 
 === Sample .spec file ===
-Create a .spec file using the following example for gettext as a template. Set the name and version strings accordingly.
+Create a .spec file using the following as a template. Set the name and version strings accordingly.
 
-{{FileBox|filename=/usr/src/rpm/SPECS/gettext-0.18.1.1.spec|title=An example of a .spec file|1=
-Name: gettext
-Version: 0.18.1.1
-Release: r1
-Summary: Use to generate virtual package to fake gettext.
-Group: Development/Tools
-License: GPL2
-BuildArch: noarch
+ Name: gettext
+ Version: 0.18.1.1
+ Release: r1
+ Summary: Use to generate virtual package to fake gettext.
+ Group: Development/Tools
+ License: GPL2
+ BuildArch: noarch
+ #Provides:  
+ 
+ %description
+ Create virtual package specifying gettext as a virtual package.
+ 
+ %prep
+ 
+ %build
+ 
+ %install
+ 
+ %files
+ 
+ %changelog
 
-%description
-Create virtual package specifying gettext as a virtual package.
-
-%prep
-
-%build
-
-%install
-
-%files
-
-%changelog
-}}
 
 [[Category:Software]]
